added modals for saving students, instructors and courses

--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -2,4 +2,5 @@
                 (event) = "getStudents($event)" 
                 (addNewEvent)="openNewModal()"
                 [tableColumnNames] = "tableColumnNames" 
-                [tableRowsData] = "tableRowsData"></app-data-info>
+                [tableRowsData] = "tableRowsData">
+</app-data-info>
