--- a/src/app/components/shared/data-info/data-info.component.html
+++ b/src/app/components/shared/data-info/data-info.component.html
@@ -1,11 +1,9 @@
 <div class="input-group mb-3">
     <input #input type="text" class="form-control" placeholder="Recipient's username">
     <div class="input-group-append">
-        <button (click) = getData(input.value) class="offset-3 btn btn-primary" type="button" id="button-addon2">Button</button>
+        <button (click) = getData(input.value) class="offset-3 btn btn-primary" type="button" id="button-addon2">Search</button>
     </div>
-    <button (click) = addNew() class="offset-2 btn btn-warning" type="button" id="button-addon2">Agregar</button>
-  
-
+    <button (click) = "addNew()" class="offset-2 btn btn-success" type="button" id="button-addon2">Add New</button>
 </div>
 
 
