added icons for tables and edit modal for student

--- a/src/app/components/course/course.component.html
+++ b/src/app/components/course/course.component.html
@@ -2,5 +2,9 @@
                 (event) = "getCourses()" 
                 (addNewEvent)="openNewModal()"
                 [tableColumnNames] = "tableColumnNames" 
+                [hasActions] = "true"
+                [editable] = "true"
+                [viewable] = "true"
+                [deletable] = "true"
                 [tableRowsData] = "tableRowsData">
 </app-data-info>
