--- a/src/app/components/instructor/instructor.component.html
+++ b/src/app/components/instructor/instructor.component.html
@@ -1,7 +1,12 @@
 <app-data-info class="m-5" 
                 (event) = "getInstructors($event)" 
                 (addNewEvent)="openNewModal()"
-                [tableColumnNames] = "tableColumnNames" 
+                [tableColumnNames] = "tableColumnNames"
+                [hasActions] = "true" 
+                [editable] = "true"
+                [viewable] = "true"
+                [deletable] = "true"
+                [hasAdditionalActions] = "true"
                 [tableRowsData] = "tableRowsData">
 </app-data-info>
 
