--- a/src/app/components/shared/data-info/data-info.component.html
+++ b/src/app/components/shared/data-info/data-info.component.html
@@ -12,11 +12,18 @@
     <thead class="thead-dark">
         <tr>
             <th scope="col" *ngFor="let tableHeader of tableColumnNames">{{tableHeader}}</th>
+            <th *ngIf="hasActions" scope="col"> Actions </th> 
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let tableData of tableRowsData"> 
             <td scope="col" *ngFor="let cellData of tableData | fieldSorterPipe" >{{cellData}}</td>
+            <td *ngIf="hasActions" scope="col">
+                <i *ngIf="editable" (click)="editRegistry(tableData)" class='fas fa-pencil-alt fa-fw'></i>
+                <i *ngIf="viewable" (click)="viewRegistry(tableData)" class='fas fa-glasses fa-fw'></i>
+                <i *ngIf="deletable" (click)="deleteRegistry(tableData)" class='fas fa-trash-alt fa-fw'></i>
+                <i *ngIf="hasAdditionalActions" (click)="makeOperationWithRegistry(tableData)" class='fas fa-tasks fa-fw'></i>
+            </td> 
         </tr>
     </tbody>
 </table>
